--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,19 @@
     </head>
     <body>
 
+        <div class="wrapper">
+            <svg width="100px" height="100px" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+                    <g id="Artboard-1" sketch:type="MSArtboardGroup" fill="#fff">
+                        <g id="Triangle-1-+-Triangle-2" sketch:type="MSLayerGroup" transform="translate(19.000000, 0.000000)">
+                            <polygon id="Triangle-1" sketch:type="MSShapeGroup" points="30.6523438 0 61.3046875 44.8787664 0 44.8787664 "></polygon>
+                            <path d="M0,55 L61.3046875,55 L30.6523438,99.8787664 L0,55 Z" id="Triangle-2" sketch:type="MSShapeGroup"></path>
+                        </g>
+                    </g>
+                </g>
+            </svg>
+            <h1>Elevator.js</h1>
+        </div>
 <!--         <a class="github-link" href="https://github.com/tholman/unicoder.js" target="_blank">
             <img src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
         </a> -->
