simple styles for demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,32 +12,70 @@
     </head>
     <body>
 
-        <div class="wrapper">
-            <svg width="100px" height="100px" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-                    <g id="Artboard-1" sketch:type="MSArtboardGroup" fill="#fff">
-                        <g id="Triangle-1-+-Triangle-2" sketch:type="MSLayerGroup" transform="translate(19.000000, 0.000000)">
-                            <polygon id="Triangle-1" sketch:type="MSShapeGroup" points="30.6523438 0 61.3046875 44.8787664 0 44.8787664 "></polygon>
-                            <path d="M0,55 L61.3046875,55 L30.6523438,99.8787664 L0,55 Z" id="Triangle-2" sketch:type="MSShapeGroup"></path>
-                        </g>
-                    </g>
-                </g>
-            </svg>
-            <h1>Elevator.js</h1>
-        </div>
-<!--         <a class="github-link" href="https://github.com/tholman/unicoder.js" target="_blank">
-            <img src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
-        </a> -->
+        <h1>Elevator.js</h1>
+        <p>
+            Ever used one of those "back to top" buttons?<br>&bull;<br> Well, this ones better... of course, to use it, you've got to scroll to the bottom of this page.
+        </p>
 
-        <!-- <div class="links">
-            <span> Created by </span>
-            <a href="http://tholman.com">Tim Holman</a>
-            <a href="http://twitter.com/twholman" target="_blank">@twholman</a>
-            <a href="https://twitter.com/share" class="twitter-share-button" data-align="right" data-text='&#x1F144;&#x1F13D;&#x1F138;&#x1F172;&#x1F17E;&#x1F173;&#x1F174;&#x24E1;.&#x24D9;&#x24E2; - turning "text" into "&#x1D599;&#x1D58A;&#x1D59D;&#x1D599;" -' data-via="twholman">Tweet</a>
-        </div> -->
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            This is content.
+        </p>
 
-        <script>
-        </script>
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            Amazing content.
+        </p>
+
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            I never liked the word content.
+        </p>
+
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            We Need To Go Deeper.
+        </p>
+
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            Wow, all this scrolling.
+        </p>
+
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            This had better be worth it.
+        </p>
+
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            Its going to take ages to get back to the top.
+        </p>
+
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            If only we had an easy way to get back...
+        </p>
+
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            ...that is both functional and fun.
+        </p>
+
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            I call "back to top" buttons elevators...
+        </p>
+
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            ...they really should behave more like one.
+        </p>
+
+        <div class="down-arrow">&#9660;</div>
+        <p>
+            Ok, here we are... lets go back up.
+        </p>
 
         <!-- Tweet Button -->
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
