--- a/demo/index.html
+++ b/demo/index.html
@@ -14,22 +14,22 @@
 
         <h1>Elevator.js</h1>
         <p>
-            Ever used one of those "back to top" buttons?<br>&bull;<br> Well, this ones better... of course, to use it, you've got to scroll to the bottom of this page.
+            Ever used one of those "back to top" buttons?<br><br> This library is one of those, only it behaves a lot more like an elevator.
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            This is content.
+            First we need to get to the bottom of the page.
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            Amazing content.
+            Because you're already at the top.
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            I never liked the word content.
+            So going to the top wouldn't make sense.
         </p>
 
         <div class="down-arrow">&#9660;</div>
@@ -69,13 +69,37 @@
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            ...they really should behave more like one.
+            ...they should really behave more them.
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
             Ok, here we are... lets go back up.
         </p>
+
+        <div class="footer">
+            <div class="back-to-top">
+                <div class="elevator">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve" height="100px" width="100px">
+                        <path d="M70,47.5H30c-1.4,0-2.5,1.1-2.5,2.5v40c0,1.4,1.1,2.5,2.5,2.5h40c1.4,0,2.5-1.1,2.5-2.5V50C72.5,48.6,71.4,47.5,70,47.5z   M47.5,87.5h-5v-25h5V87.5z M57.5,87.5h-5v-25h5V87.5z M67.5,87.5h-5V60c0-1.4-1.1-2.5-2.5-2.5H40c-1.4,0-2.5,1.1-2.5,2.5v27.5h-5  v-35h35V87.5z"/>
+                        <path d="M50,42.5c1.4,0,2.5-1.1,2.5-2.5V16l5.7,5.7c0.5,0.5,1.1,0.7,1.8,0.7s1.3-0.2,1.8-0.7c1-1,1-2.6,0-3.5l-10-10  c-1-1-2.6-1-3.5,0l-10,10c-1,1-1,2.6,0,3.5c1,1,2.6,1,3.5,0l5.7-5.7v24C47.5,41.4,48.6,42.5,50,42.5z"/>
+                    </svg>
+                    Back to Top
+                </div>
+            </div>
+        </div>
+
+        <script>
+
+            // Simple elevator usage.
+            var elementButton = document.querySelector('.elevator');
+            var elevator = new Elevator({
+                element: elementButton,
+                mainAudio: './music/elevator-music.mp3', // Music from http://www.bensound.com/
+                endAudio:  './music/ding.mp3', // Music from http://www.bensound.com/
+            });
+
+        </script>
 
         <!-- Tweet Button -->
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
