more demo page, and functionality

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title> Elevator.js </title>
-        <meta name="description" content="Are you sick of clicking 'back to top' buttons on websites, and being lifted to the top without a real elevator experience? Of course you have! Elevator.js is here to help.">
+        <meta name="description" content="Are you sick of clicking 'back to top' buttons on websites, and being lifted to the top without a real elevator experience? Elevator.js is here to help.">
 
         <!-- JS -->
         <script src='../elevator.js'></script>
@@ -14,8 +14,11 @@
 
         <h1>Elevator.js</h1>
         <p>
-            Ever used one of those "back to top" buttons?<br><br> This library is one of those, only it behaves a lot more like an elevator.
+            Elevator.js fixes those awkward "scroll to top" moments the old fashioned way.
         </p>
+        <div class="links">
+            <a href="http://tholman.com">By Tim Holman</a> &bull; <a href="http://github.com/tholman/elevator.js">Source & Instructions</a> &bull; <a href="https://twitter.com/share" class="twitter-share-button" data-text='Elevator.js, "back to top" buttons have never been so real! -'  data-via="twholman">Tweet</a>
+        </div>
 
         <div class="down-arrow">&#9660;</div>
         <p>
@@ -29,12 +32,12 @@
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            So going to the top wouldn't make sense.
+            So a "back to top" button wouldn't make sense.
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            We Need To Go Deeper.
+            Down down down.
         </p>
 
         <div class="down-arrow">&#9660;</div>
@@ -74,7 +77,7 @@
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            Ok, here we are... lets go back up.
+            Ok, here we are... click that elevator! 
         </p>
 
         <div class="footer">
@@ -88,6 +91,10 @@
                 </div>
             </div>
         </div>
+
+        <a class="github-link" href="https://github.com/tholman/elevator.js" target="_blank">
+            <img src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
+        </a>
 
         <script>
 
