--- a/demo/index.html
+++ b/demo/index.html
@@ -72,7 +72,7 @@
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            ...they should really behave more them.
+            ...they should really behave more like them.
         </p>
 
         <div class="down-arrow">&#9660;</div>
