Fixes typo in demo.

--- a/demo/index.html
+++ b/demo/index.html
@@ -52,7 +52,7 @@
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            Its going to take ages to get back to the top.
+            It's going to take ages to get back to the top.
         </p>
 
         <div class="down-arrow">&#9660;</div>
