remove redundant comment from demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -103,7 +103,7 @@
             var elevator = new Elevator({
                 element: elementButton,
                 mainAudio: './music/elevator-music.mp3', // Music from http://www.bensound.com/
-                endAudio:  './music/ding.mp3' // Music from http://www.bensound.com/
+                endAudio:  './music/ding.mp3'
             });
 
         </script>
