--- a/demo/index.html
+++ b/demo/index.html
@@ -102,7 +102,7 @@
             var elementButton = document.querySelector('.elevator');
             var elevator = new Elevator({
                 element: elementButton,
-                mainAudio: './music/elevator-music.mp3', // Music from http://www.bensound.com/
+                mainAudio: './music/elevator.mp3', // Music from http://www.bensound.com/
                 endAudio:  './music/ding.mp3'
             });
 
