--- a/demo/index.html
+++ b/demo/index.html
@@ -22,57 +22,57 @@
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            First we need to get to the bottom of the page.
+            First we need to get to the bottom of the page.  <img src="peacock.png" width="150">
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            Because you're already at the top.
+            Because you're already at the top.  <img src="suzume.png" width="150">
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            So a "back to top" button wouldn't make sense.
+            So a "back to top" button wouldn't make sense.  <img src="dub.png" width="150">
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            Down down down.
+            Down down down.  <img src="niwatori1.png" width="150">
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            Wow, all this scrolling.
+            Wow, all this scrolling.  <img src="niwatori2.png" width="150">
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            This had better be worth it.
+            This had better be worth it.  <img src="mimizuku.png" width="150">
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            It's going to take ages to get back to the top.
+            It's going to take ages to get back to the top.  <img src="niwatori3.png" width="150">
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            If only we had an easy way to get back...
+            If only we had an easy way to get back...<img src="hiyoko.png" width="150">
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            ...that is both functional and fun.
+            ...that is both functional and fun. <img src="niwatori4.png" width="150">
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            I call "back to top" buttons elevators...
+            I call "back to top" buttons elevators... <img src="niwatori3.png" width="150">
         </p>
 
         <div class="down-arrow">&#9660;</div>
         <p>
-            ...they should really behave more like them.
+            ...they should really behave more like them.  <img src="blue-bird.png" width="150">
         </p>
 
         <div class="down-arrow">&#9660;</div>
