--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,7 @@
             Elevator.js fixes those awkward "scroll to top" moments the old fashioned way.
         </p>
         <div class="links">
-            <a href="http://tholman.com">By Tim Holman</a> &bull; <a href="http://github.com/tholman/elevator.js">Source & Instructions</a> &bull; <a href="https://twitter.com/share" class="twitter-share-button" data-text='Elevator.js, "back to top" buttons have never been so real! -'  data-via="twholman">Tweet</a>
+            <a href="http://tholman.com">Original Souce By Tim Holman</a> &bull; <a href="http://github.com/tholman/elevator.js">Source & Instructions</a> &bull; <a href="https://github.com/yukyco" code-via="twholman">Spooned by Yukyco</a>
         </div>
 
         <div class="down-arrow">&#9660;</div>
