--- a/demo/index.html
+++ b/demo/index.html
@@ -92,6 +92,14 @@
             </div>
         </div>
 
+        <div id="door-left" style="position: fixed; top: 0; bottom: 0; left: -1vw; width: 50vw; content-sizing: content-box; border: 3px solid #666; background-color: #aaa;">
+            <div style="position: absolute; top: 0; height: 100vh; left: 16vw; right: 16vw; border-left: 3px solid #666; border-right: 3px solid #666;">
+            </div>
+        </div>
+        <div id="door-right" style="position: fixed; top: 0; bottom:0; right: -1vw; width: 50vw; content-sizing: content-box; border: 3px solid #666; background-color: #aaa;">
+            <div style="position: absolute; top: 0; height: 100vh; left: 16vw; right: 16vw; border-left: 3px solid #666; border-right: 3px solid #666;">
+        </div>
+
         <a class="github-link" href="https://github.com/tholman/elevator.js" target="_blank">
             <img src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
         </a>
