--- a/demo/index.html
+++ b/demo/index.html
@@ -92,11 +92,11 @@
             </div>
         </div>
 
-        <div id="door-left" style="position: fixed; top: 0; bottom: 0; left: -1vw; width: 50vw; content-sizing: content-box; border: 3px solid #666; background-color: #aaa;">
+        <div id="door-left" style="position: fixed; top: 0; bottom: 0; left: -52vw; width: 50vw; content-sizing: content-box; border: 3px solid #666; background-color: #aaa;">
             <div style="position: absolute; top: 0; height: 100vh; left: 16vw; right: 16vw; border-left: 3px solid #666; border-right: 3px solid #666;">
             </div>
         </div>
-        <div id="door-right" style="position: fixed; top: 0; bottom:0; right: -1vw; width: 50vw; content-sizing: content-box; border: 3px solid #666; background-color: #aaa;">
+        <div id="door-right" style="position: fixed; top: 0; bottom:0; right: -52vw; width: 50vw; content-sizing: content-box; border: 3px solid #666; background-color: #aaa;">
             <div style="position: absolute; top: 0; height: 100vh; left: 16vw; right: 16vw; border-left: 3px solid #666; border-right: 3px solid #666;">
         </div>
 
@@ -110,6 +110,7 @@
             var elementButton = document.querySelector('.elevator');
             var elevator = new Elevator({
                 element: elementButton,
+                doors: [document.getElementById('door-left'), document.getElementById('door-right')],
                 mainAudio: './music/elevator.mp3', // Music from http://www.bensound.com/
                 endAudio:  './music/ding.mp3'
             });
